adding JS questions

--- a/index.html
+++ b/index.html
@@ -16,16 +16,6 @@
 
         <h1> About Me .. !! </h1>
 
-        <p> Hello there, my name is Qusai Tashtos.. 
-            i have been studied at Hashmite University, i get a bachlore degree in SOFTWARE ENGINEERING, 
-            i have been graduated at may/2020 and i have no practical experince yet..
-            im enrolled in this course to increase my knowledge in my major and get the right chance 
-            to have a job offer after i finish inshallah .. 
-            i hope u will have fun in my website .
-
-            thanks for visiting ..
-        </p>
-
         <nav>
             <ul>
                 <li><a href="#"> Home </a></li>
@@ -34,15 +24,45 @@
             </ul>
         </nav>
 
+        
+
+        <ul> Hello there, my name is Qusai Tashtos.. 
+            <li> i have been studied at Hashmite University </li>
+            <li> i get a bachlore degree in SOFTWARE ENGINEERING </li>
+            <li> i have been graduated at may/2020 </li>
+            <li> i have no practical experince yet </li>
+            <li> im enrolled in this course to increase my knowledge in my major and get the right chance 
+                to have a job offer after i finish inshallah </li>
+            <li> i hope u will have fun in my website </li>
+        </ul>
+
+        
+
     </header>
 
     <main>
 
     </main>
 
+    <ol> Top 10 Movies That i love
+        <li> 1. The Equlize </li>
+        <li> 2. 22 Mile </li>
+        <li> 3. Fight Club </li>
+        <li> 4. Interstaller </li>
+        <li> 5. ocean 8 </li>
+        <li> 6. Fast 9 </li>
+        <li> 7. Mission Impossible rough nation </li>
+        <li> 8. Law abiding citizen </li>
+        <li> 9. 12 strongs </li>
+        <li> 10. The wolf of wall street </li>
+    </ol>
+
     <footer>
+          &copy; For Qusai Tashtosh
 
     </footer>
+
+
 
     <script src="js/app.js"></script>
 
