--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1> About Me .. !! </h1>
 
         <nav>
-            <ul>
+            <ul id="First">
                 <li><a href="#"> Home </a></li>
                 <li><a href="#"> About us </a></li>
                 
@@ -26,7 +26,7 @@
 
         
 
-        <ul> Hello there, my name is Qusai Tashtos.. 
+        <ul id ="Secound"> Hello there, my name is Qusai Tashtosh.. 
             <li> i have been studied at Hashmite University </li>
             <li> i get a bachlore degree in SOFTWARE ENGINEERING </li>
             <li> i have been graduated at may/2020 </li>
@@ -64,7 +64,7 @@
 
 
 
-    <script src="js/app.js"></script>
+  <!-- <script src="js/app.js"></script> -->
 
 </body>
 </html>
